--- a/roadrecon/frontend/src/app/appmain/approles/approles.component.html
+++ b/roadrecon/frontend/src/app/appmain/approles/approles.component.html
@@ -1,6 +1,6 @@
 <div >
   <div class="mat-elevation-z4 pagedescription">
-    This page shows all application roles granted in the tenant. These roles are often used to manage access to applications or APIs. If the role is granted to a user/group, it is often used to grant access to an application or to give the user an (administrative) role in an application. If the role is assigned to a ServicePrincipal, the role is often used to manage API permissions, such as for the Microsoft Graph (the Azure Portal calls this an application role).
+    This page shows all application roles granted in the tenant. These roles are often used to manage access to applications or APIs. If the role is granted to a user/group, it is often used to grant access to an application or to give the user an (administrative) role in an application. If the role is assigned to a ServicePrincipal, the role is often used to manage API permissions, such as for the Microsoft Graph (the Azure Portal calls this an application permission).
   </div>
       <mat-form-field>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
