--- a/roadrecon/frontend/src/app/appmain/groups/groupsdialog/groupsdialog.component.html
+++ b/roadrecon/frontend/src/app/appmain/groups/groupsdialog/groupsdialog.component.html
@@ -40,7 +40,7 @@
     <mat-expansion-panel *ngIf="group.ownerUsers.length > 0"  expanded>
       <mat-expansion-panel-header>
         <mat-panel-title>
-          Owners ({{ group.ownerUsers.length }})
+          Owner users ({{ group.ownerUsers.length }})
         </mat-panel-title>
       </mat-expansion-panel-header>
 
@@ -58,7 +58,28 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumnsOwners;"></tr>
       </table>
     </mat-expansion-panel>
+    <mat-expansion-panel *ngIf="group.ownerServicePrincipals.length > 0"  expanded>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Owner service principals ({{ group.ownerServicePrincipals.length }})
+        </mat-panel-title>
+      </mat-expansion-panel-header>
 
+      <table mat-table [dataSource]="group.ownerServicePrincipals" class="full-width-table">
+        <ng-container matColumnDef="displayName">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let row"><a [routerLink]="['/serviceprincipals/', row.objectId]">{{row.displayName}}</a></td>
+        </ng-container>
+
+        <ng-container matColumnDef="servicePrincipalType">
+          <th mat-header-cell *matHeaderCellDef>Type</th>
+          <td mat-cell *matCellDef="let row">{{row.servicePrincipalType}}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsServicePrincipal"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsServicePrincipal;"></tr>
+      </table>
+    </mat-expansion-panel>
 
     <mat-expansion-panel expanded>
       <mat-expansion-panel-header>
@@ -73,9 +94,9 @@
           <td mat-cell *matCellDef="let row"><a [routerLink]="['/users/', row.objectId]">{{row.displayName}}</a></td>
         </ng-container>
 
-        <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef>Description</th>
-          <td mat-cell *matCellDef="let row">{{row.description}}</td>
+        <ng-container matColumnDef="userPrincipalName">
+          <th mat-header-cell *matHeaderCellDef>User principal name</th>
+          <td mat-cell *matCellDef="let row">{{row.userPrincipalName}}</td>
         </ng-container>
 
         <ng-container matColumnDef="userType">
@@ -116,8 +137,13 @@
       </mat-expansion-panel-header>
       <table *ngIf="group.memberServicePrincipals.length > 0" mat-table [dataSource]="group.memberServicePrincipals">
         <ng-container matColumnDef="displayName">
-          <th mat-header-cell *matHeaderCellDef>displayName</th>
+          <th mat-header-cell *matHeaderCellDef>Name</th>
           <td mat-cell *matCellDef="let row"><a [routerLink]="['/serviceprincipals/', row.objectId]">{{row.displayName}}</a></td>
+        </ng-container>
+
+        <ng-container matColumnDef="servicePrincipalType">
+          <th mat-header-cell *matHeaderCellDef>Type</th>
+          <td mat-cell *matCellDef="let row">{{row.servicePrincipalType}}</td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumnsServicePrincipal"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumnsServicePrincipal;"></tr>
