--- a/roadrecon/msgraph_frontend/src/app/appmain/directoryroles/roletable.component.html
+++ b/roadrecon/msgraph_frontend/src/app/appmain/directoryroles/roletable.component.html
@@ -56,25 +56,32 @@
     </ng-container> -->
 
 
-    <!-- TO DO: Fix the MFA stuff -->
-    <ng-container matColumnDef="strongAuthenticationDetail">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>MFA</mat-header-cell>
-      <mat-cell *matCellDef="let row">
-      <div *ngIf="row.principal.strongAuthenticationDetail">
-        <span *ngFor="let method of row.principal.strongAuthenticationDetail.methods">
-          <mat-icon *ngIf="method.methodType == 'PhoneAppOTP'" aria-label="App with OTP" [class.active]="method.isDefault" matTooltip="App with OTP" >phonelink_lock</mat-icon>
-          <mat-icon *ngIf="method.methodType == 'PhoneAppNotification'" aria-label="Phone notification" [class.active]="method.isDefault" matTooltip="App with notification" >notifications_active</mat-icon>
+   
+    <ng-container matColumnDef="methodsRegistered">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Methods</th>
+      <td mat-cell *matCellDef="let row">
+        <span *ngFor="let method of row.methodsRegistered">
+          <mat-icon *ngIf="method == 'PhoneAppOTP'" aria-label="App with OTP" [class.active]="method.isDefault" matTooltip="App with OTP" >phonelink_lock</mat-icon>
+          <mat-icon *ngIf="method == 'PhoneAppNotification'" aria-label="Phone notification" [class.active]="method.isDefault" matTooltip="App with notification" >phonelink_lock</mat-icon>
+          <mat-icon *ngIf="method == 'microsoftAuthenticatorPush'" aria-label="Phone notification" [class.active]="method.isDefault" matTooltip="Microsoft Authenticator (push notification)" >notifications_active</mat-icon>
+          <mat-icon *ngIf="method == 'deviceBasedPush'" aria-label="Phone notification" [class.active]="method.isDefault" matTooltip="Microsoft Authenticator (Passwordless)" >notifications_active</mat-icon>
           <mat-icon *ngIf="method.methodType == 'OneWaySms'" aria-label="Text message (SMS)" [class.active]="method.isDefault" matTooltip="Text message (SMS)" >sms</mat-icon>
+          <mat-icon *ngIf="method == 'sms'" aria-label="Text message (SMS)" [class.active]="method.isDefault" matTooltip="Text message (SMS)" >sms</mat-icon>
+          <mat-icon *ngIf="method == 'mobilePhone'" aria-label="Text message (SMS)" [class.active]="method.isDefault" matTooltip="Text message (SMS)" >sms</mat-icon>
+          <mat-icon *ngIf="method == 'voice'" aria-label="Phone call" [class.active]="method.isDefault" matTooltip="Phone call" >phone_callback</mat-icon>
           <mat-icon *ngIf="method.methodType == 'TwoWayVoiceMobile'" aria-label="Phone call" [class.active]="method.isDefault" matTooltip="Phone call" >phone_callback</mat-icon>
+          <mat-icon *ngIf="method == 'FIDO'" aria-label="FIDO key" [class.active]="method.isDefault" matTooltip="FIDO key">passkey</mat-icon>  
+          <mat-icon *ngIf="method == 'Fido2'" aria-label="FIDO key" [class.active]="method.isDefault" matTooltip="FIDO key">passkey</mat-icon>  
+          <mat-icon *ngIf="method == 'windowsHelloForBusiness'" aria-label="Windows Hello" matTooltip="Windows Hello for Business" >passkey</mat-icon>
+          <mat-icon *ngIf="method == 'temporaryAccessPassOneTime'" aria-label="Windows Hello" matTooltip="Windows Hello for Business" >timer</mat-icon>
+          
         </span>
-      </div>
-      <div *ngIf="row.principal.searchableDeviceKey">
-        <span *ngFor="let sdk of row.principal.searchableDeviceKey">
+         <!-- <span *ngFor="let sdk of row.searchableDeviceKey">
           <mat-icon *ngIf="sdk.usage == 'NGC'" aria-label="Windows Hello" matTooltip="Windows Hello for Business" >passkey</mat-icon>
           <mat-icon *ngIf="sdk.usage == 'FIDO'" aria-label="FIDO2 key / passkey" matTooltip="FIDO 2 key or passkey" >passkey</mat-icon>
-        </span>
-      </div>
-      </mat-cell>
+          <mat-icon *ngIf="sdk.usage == 'fido2'" aria-label="FIDO2 key / passkey" matTooltip="FIDO 2 key or passkey" >passkey</mat-icon>
+        </span>  -->
+      </td> 
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
