--- a/roadrecon/msgraph_frontend/src/app/appmain/users/users.component.html
+++ b/roadrecon/msgraph_frontend/src/app/appmain/users/users.component.html
@@ -39,21 +39,40 @@
       <td mat-cell *matCellDef="let row">{{row.businessPhones}}</td>
     </ng-container>
 
-    <!-- TO DO: Fix MFA -->
-    <ng-container matColumnDef="strongAuthenticationDetail">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>MFA</th>
+
+
+
+    <!-- <ng-container matColumnDef="isMfaRegistered">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>MFA Registered</th>
+      <td mat-cell *matCellDef="let row">{{row.isMfaRegistered}}</td>
+    </ng-container> -->
+
+    <!-- https://learn.microsoft.com/en-us/graph/api/authenticationstrengthroot-list-authenticationmethodmodes?view=graph-rest-1.0&tabs=http -->
+    <ng-container matColumnDef="methodsRegistered">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Methods</th>
       <td mat-cell *matCellDef="let row">
-        <span *ngFor="let method of row.strongAuthenticationDetail.methods">
-          <mat-icon *ngIf="method.methodType == 'PhoneAppOTP'" aria-label="App with OTP" [class.active]="method.isDefault" matTooltip="App with OTP" >phonelink_lock</mat-icon>
-          <mat-icon *ngIf="method.methodType == 'PhoneAppNotification'" aria-label="Phone notification" [class.active]="method.isDefault" matTooltip="App with notification" >notifications_active</mat-icon>
+        <span *ngFor="let method of row.methodsRegistered">
+          <mat-icon *ngIf="method == 'PhoneAppOTP'" aria-label="App with OTP" [class.active]="method.isDefault" matTooltip="App with OTP" >phonelink_lock</mat-icon>
+          <mat-icon *ngIf="method == 'PhoneAppNotification'" aria-label="Phone notification" [class.active]="method.isDefault" matTooltip="App with notification" >phonelink_lock</mat-icon>
+          <mat-icon *ngIf="method == 'microsoftAuthenticatorPush'" aria-label="Phone notification" [class.active]="method.isDefault" matTooltip="Microsoft Authenticator (push notification)" >notifications_active</mat-icon>
+          <mat-icon *ngIf="method == 'deviceBasedPush'" aria-label="Phone notification" [class.active]="method.isDefault" matTooltip="Microsoft Authenticator (Passwordless)" >notifications_active</mat-icon>
           <mat-icon *ngIf="method.methodType == 'OneWaySms'" aria-label="Text message (SMS)" [class.active]="method.isDefault" matTooltip="Text message (SMS)" >sms</mat-icon>
+          <mat-icon *ngIf="method == 'sms'" aria-label="Text message (SMS)" [class.active]="method.isDefault" matTooltip="Text message (SMS)" >sms</mat-icon>
+          <mat-icon *ngIf="method == 'mobilePhone'" aria-label="Text message (SMS)" [class.active]="method.isDefault" matTooltip="Text message (SMS)" >sms</mat-icon>
+          <mat-icon *ngIf="method == 'voice'" aria-label="Phone call" [class.active]="method.isDefault" matTooltip="Phone call" >phone_callback</mat-icon>
           <mat-icon *ngIf="method.methodType == 'TwoWayVoiceMobile'" aria-label="Phone call" [class.active]="method.isDefault" matTooltip="Phone call" >phone_callback</mat-icon>
+          <mat-icon *ngIf="method == 'FIDO'" aria-label="FIDO key" [class.active]="method.isDefault" matTooltip="FIDO key">passkey</mat-icon>  
+          <mat-icon *ngIf="method == 'Fido2'" aria-label="FIDO key" [class.active]="method.isDefault" matTooltip="FIDO key">passkey</mat-icon>  
+          <mat-icon *ngIf="method == 'windowsHelloForBusiness'" aria-label="Windows Hello" matTooltip="Windows Hello for Business" >passkey</mat-icon>
+          <mat-icon *ngIf="method == 'temporaryAccessPassOneTime'" aria-label="Windows Hello" matTooltip="Windows Hello for Business" >timer</mat-icon>
+          
         </span>
-        <span *ngFor="let sdk of row.searchableDeviceKey">
+         <!-- <span *ngFor="let sdk of row.searchableDeviceKey">
           <mat-icon *ngIf="sdk.usage == 'NGC'" aria-label="Windows Hello" matTooltip="Windows Hello for Business" >passkey</mat-icon>
           <mat-icon *ngIf="sdk.usage == 'FIDO'" aria-label="FIDO2 key / passkey" matTooltip="FIDO 2 key or passkey" >passkey</mat-icon>
-        </span>
-      </td>
+          <mat-icon *ngIf="sdk.usage == 'fido2'" aria-label="FIDO2 key / passkey" matTooltip="FIDO 2 key or passkey" >passkey</mat-icon>
+        </span>  -->
+      </td> 
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
