roadrecon: add group members in roles overview and add links to entra portal on users and groups

--- a/roadrecon/frontend/src/app/appmain/config/config.component.html
+++ b/roadrecon/frontend/src/app/appmain/config/config.component.html
@@ -5,5 +5,9 @@
     <mat-slide-toggle [(ngModel)]="mfa" [checked]="mfa">
         Show MFA columns (only accurate if you collected this data)
       </mat-slide-toggle>
+      <br />
+      <mat-slide-toggle [(ngModel)]="portallinks" [checked]="portallinks">
+        Show management links to Entra portal on objects
+      </mat-slide-toggle>
   </mat-card-content>
 </mat-card>
